<resources>
    <string name="app_name">榴莲餐厅让你留恋</string>
    <string name="action_settings">Settings</string>
    <string name="title1">智能家居</string>
    <string name="title2">智能农业</string>
    <string name="title3">公交一卡通</string>
    <string name="title4">食品溯源</string>
    <string name="title5">Zigbee传感器测试</string>
    <string name="title6">RFID测试</string>
    <string name="title7">榴莲餐厅</string>
    <string name="back">回主页</string>
    <string name="smarthome_settings">智能家居系统设置</string>
    <string name="smarthome_prefix_temp">当前温度设定值为</string>
    <string name="smarthome_sheshidu">℃</string>
    <string name="smarthome_prefix_hum">当前湿度设定值为</string>
    <string name="smarthome_percent">%</string>
    <string name="smarthome_temp_auto_on">打开温度自动化管理</string>
    <string name="smarthome_temp_auto_off">关闭温度自动化管理</string>
    <string name="smarthome_bright_auto_on">打开灯光自动化管理</string>
    <string name="smarthome_bright_auto_off">关闭灯光自动化管理</string>
    <string name="smartagriculture_system_settings">智能农业系统设置</string>
    <string name="smartagriculture_prefix_temp">当前温度设定值为</string>
    <string name="smartagriculture_sheshidu">℃</string>
    <string name="smartagriculture_prefix_hum">当前湿度设定值为</string>
    <string name="smartagriculture_percent">%</string>
    <string name="smartagriculture_temp_auto_on">打开温度自动化管理</string>
    <string name="smartagriculture_temp_auto_off">关闭温度自动化管理</string>
    <string name="smartagriculture_temp_control">当前状态为大棚温度自动管理</string>
    <string name="smartagriculture_hum_control">当前状态为土壤湿度自动管理</string>
    <string-array name="smartagriculture_settings_list">
        <item>大棚温度自动管理</item>
        <item>土壤湿度自动管理</item>
    </string-array>
    <string-array name="smartagriculture_settings_values">
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="foodtraceability_settings">食品溯源系统设置</string>
    <string name="foodtraceability_title">食品信息设置</string>
    <string name="foodtraceability_type_a_fail">设置卡片类型错误</string>
    <string name="foodtraceability_frequency_fail">射频控制错误</string>
    <string name="foodtraceability_current_id">当前的授权id为：</string>
    <string name="foodtraceability_name">食品名称：</string>
    <string name="foodtraceability_time">生产日期：</string>
    <string name="foodtraceability_place">产地：</string>
    <string name="foodtraceability_material">用料：</string>
    <string name="foodtraceability_if_author_current_id">是否授权当前ID？</string>
    <string name="foodtraceability_if_cancel_author">是否取消授权？</string>
    <string name="foodtraceability_author_id">授权</string>
    <string name="foodtraceability_cancel_author">取消授权</string>
    <string name="foodtraceability_enter_id">请输入要授权的ID号</string>
    <string name="foodtraceability_no_card">当前无卡</string>
    <string name="foodtraceability_no_author_id">无存在的授权ID</string>
    <string name="foodtraceability_title_activity_datalist">DatalistActivity</string>
    <string name="foodtraceability_commit">确定</string>
    <string name="foodtraceability_cancel">取消</string>
    <string name="title_activity_main">Buscard</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="buscard_action_settings">Settings</string>
    <string name="buscard_title_activity_recharge">一卡通充值</string>
    <string name="buscard_title_activity_resume">一卡通刷卡</string>
    <string name="buscard_button_resume">刷卡</string>
    <string name="buscard_button_recharge">充值</string>
    <string name="buscard_recharge_hint">请输入充值金额</string>
    <string name="buscard_type_a_succeed">设置工作模式成功</string>
    <string name="buscard_type_a_fail">设置工作模式失败</string>
    <string name="buscard_frequency_open_succeed">打开射频成功</string>
    <string name="buscard_frequency_open_fail">打开射频失败</string>
    <string name="buscard_frequency_close_succeed">关闭射频成功</string>
    <string name="buscard_frequency_close_fail">关闭射频失败</string>
    <string name="buscard_please_author_first">请先开卡授权</string>
    <string name="buscard_search_more_than_one">找到多条记录</string>
    <string name="buscard_not_check_card">未检测到卡</string>
    <string name="buscard_author_succeed">开卡成功</string>
    <string name="buscard_author_fail">开卡失败</string>
    <string name="buscard_if_cancel_item">是否要消除此卡的记录？</string>
    <string name="buscard_OK">确定</string>
    <string name="buscard_CANCEL">取消</string>
    <string name="buscard_cancel_author_succeed">成功销卡</string>
    <string name="buscard_cancel_author_fail">销卡失败</string>
    <string name="buscard_recharge_fail">充值失败</string>
    <string name="buscard_recharge_succeed">充值成功</string>
    <string name="buscard_shortage">余额不足，请充值</string>
    <string name="buscard_time_limit">刷卡间隔太短，请稍后再试</string>
    <string name="buscard_authored_already">本卡已授权</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="zigbee_content">ZIGBEE\nSENSOR TEST</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="shake_sensor">震动传感器</string>
    <string name="Infra_red_sensor">红外传感器</string>
    <string name="PE_sensor">光电传感器</string>
    <string name="Three_axis_acceleration_sensor">三轴加速度传感器</string>
    <string name="doppler_sensor">多普勒传感器</string>
    <string name="smoke_sensor">有害气体传感器</string>
    <string name="hall_sensor">霍尔传感器</string>
    <string name="sensor_check_result">传感器检测结果：</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">




        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_zigbeetest">zigbeetest</string>
    <string name="title_activity_settings_smarthomewall">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
</resources>